--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
 </head>
+
 <body>
     <h1>you have succesfully logged in </h1>
     <ul>
-     <%= name %> 
+        <%= name %>
     </ul>
+    <form action="upload" method="POST" enctype="multipart/form-data">
+        <h4>Browse your file</h4>
+        <input type="file" name="files" multiple /> <br><br>
+        <input type="submit" value="Upload File" />
+    </form>
+
 </body>
+
 </html>
