--- a/views/home.ejs
+++ b/views/home.ejs
@@ -18,7 +18,11 @@
         <input type="file" name="files" multiple required /> <br><br>
         <input type="submit" value="Upload File" />
     </form>
-
+    <br><br><br><br>
+    <h3>get list of files</h3>
+    <form action="list" method="GET">
+        <input type="submit" value="get list of files">
+    </form>
 </body>
 
 </html>
