--- a/views/listResponse.ejs
+++ b/views/listResponse.ejs
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <h3>list of files are </h3>
-    <ul>
-        <%= 
-    </ul>
+    <h1>list of files are </h1>
+
+    <ol>
+        <% data.forEach(function(data) { %>
+            <% if(data.mimeType=='image/png' ){ %>
+                <li> Name:<%= data.name %> <br> id:<%= data.id %> <br> mimetype:<%=data.mimeType%>
+                </li><br>
+                <% } %>
+                    <% }); %>
+    </ol>
 </body>
+
 </html>
