--- a/views/home.ejs
+++ b/views/home.ejs
@@ -22,6 +22,10 @@
     <h3>get list of files</h3>
     <form action="list" method="GET">
         <input type="submit" value="get list of files">
+    </form><br><br>
+    <form action="delete" method="POST" enctype="application/x-www-form-urlencoded">
+        <input type="text" name="id" id="id">
+        <input type="submit" value="delete file">
     </form>
 </body>
 
