--- a/views/expireToken.ejs
+++ b/views/expireToken.ejs
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h3>your token has expired please login again</h3>
+    <h3>your token has expired please login again</h3><br><br><br><br>
+    <a href="http://localhost:3000/auth/google"> click here to login again</a>
 </body>
 </html>
