update render url

--- a/views/error.ejs
+++ b/views/error.ejs
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h2>your session has expired please login again</h2>
-    <a href="http://localhost:3000/auth/google"> click here to login again</a>
+    <a href="https://google-oauth-2-login.onrender.com/auth/google"> click here to login again</a>
 </body>
 </html>
