--- a/views/expireToken.ejs
+++ b/views/expireToken.ejs
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h3>your token has expired please login again</h3><br><br><br><br>
-    <a href="http://localhost:3000/auth/google"> click here to login again</a>
+    <a href="https://google-oauth-2-login.onrender.com/auth/google"> click here to login again</a>
 </body>
 </html>
